<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/layout">
    <data>
        <variable name="viewmodel" type="com.devmina.droid_ant.getdata.videos.VideosViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="0dp"
                android:layout_height="244dp"
                app:autoPlay="false"
                app:showFullScreenButton="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
        />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/youtube_player_view"
                android:orientation="vertical" android:layout_alignParentBottom="true"
                android:layout_marginTop="8dp"
                android:layout_alignParentTop="true" android:weightSum="3" app:layout_constraintVertical_bias="0.0"
                android:id="@+id/linearLayout">
            <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/title"
                    tools:text="@string/title"
                    android:textColor="@color/title"
                    android:fontFamily="@font/alef"
                    android:textSize="@dimen/textSize"
                    android:text="@{viewmodel.title}"
                    android:layout_weight="1"

                    android:layout_marginTop="8dp"/>

            <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/date"
                    tools:text="@string/date"
                    android:text="@{viewmodel.date}"
                    android:layout_weight="1" android:layout_marginTop="8dp"/>


            <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_gravity="bottom"
            >

                <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        tools:text="@string/description_text"
                        android:text="@{viewmodel.desc}"/>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>