<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewmodel" type="com.devmina.droid_ant.getdata.more.MoreViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="200dp"
                      android:id="@+id/card" app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      android:orientation="vertical"
                      android:background="@color/more_background">

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">

                <ImageView
                        android:layout_width="84dp"
                        android:layout_height="84dp"
                        android:id="@+id/imageView"

                        app:circleImageUrl="@{viewmodel.thumbnail}"

                        tools:srcCompat="@tools:sample/avatars"
                        android:layout_gravity="center_horizontal"/>
                <TextView
                        tools:text="@string/channel_title"
                        android:text="@{viewmodel.title}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txTitle"
                        android:textSize="30sp"
                        android:textColor="@android:color/black"
                        android:fontFamily="sans-serif-black" android:layout_gravity="center_horizontal"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="horizontal"
            >
                <TextView
                        android:text="@string/total_subscribers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txSub"
                        android:fontFamily="cursive"
                        android:layout_marginTop="10dp"
                        android:textColor="@android:color/black"
                        android:layout_marginStart="30dp" android:textSize="20sp"/>
                <TextView
                        android:text="Total Views"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txViews"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="cursive"
                        android:textColor="@android:color/black"
                        android:layout_marginStart="130dp"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView
                        tools:text="44K"
                        android:text="@{viewmodel.totalViews}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView14"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:layout_marginStart="70dp"/>
                <TextView
                        tools:text="13 K"
                        android:text="@{viewmodel.totalSubscriber}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView13"
                        android:textSize="18sp"
                        android:textColor="@android:color/black" android:layout_marginStart="200dp"/>

            </LinearLayout>
        </LinearLayout>


        <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:id="@+id/imgAbout"
                android:layout_marginTop="56dp"
                app:layout_constraintTop_toBottomOf="@+id/card" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.024"
                android:src="@drawable/about_icon"/>
        <TextView
                android:text="@string/about"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txAbout" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/imgAbout" android:layout_marginStart="8dp"
                android:layout_marginTop="76dp" app:layout_constraintTop_toBottomOf="@+id/card"
                app:layout_constraintHorizontal_bias="1.0" android:textSize="24sp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/title" android:gravity="center_horizontal"/>
        <TextView
                android:text="@string/contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txCont" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="96dp" app:layout_constraintTop_toBottomOf="@+id/imgAbout"
                app:layout_constraintHorizontal_bias="0.029" android:textColor="@android:color/black"
                android:textSize="24sp"/>
        <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:id="@+id/imgFac"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                app:layout_constraintTop_toBottomOf="@+id/txCont"
                android:src="@drawable/facebook_icon" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.387"
                android:layout_marginTop="8dp"/>
        <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:id="@+id/imgInsta"
                app:layout_constraintStart_toEndOf="@+id/imgFac"
                android:layout_marginStart="16dp" android:src="@drawable/insta_icon" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txCont"
                app:layout_constraintVertical_bias="0.397"/>
        <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:id="@+id/imgTwit" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txCont"
                app:layout_constraintStart_toEndOf="@+id/imgInsta"
                android:layout_marginStart="24dp" android:src="@drawable/twit_icon" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.397"/>
        <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:id="@+id/imgGoog" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txCont"
                app:layout_constraintStart_toEndOf="@+id/imgTwit"
                android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:src="@drawable/google_icon"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.397"
                android:layout_marginBottom="8dp" app:layout_constraintHorizontal_bias="0.111"/>

        <ImageView
                android:id="@+id/Mstatus_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:youtubeApiStatus="@{viewmodel.status}" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>